[project]
name = "blogwriter-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[litellm,tools]>=1.6.1",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.136.1",
    "firecrawl-py>=4.27.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "mistralai>=2.4.5",
    "openai>=2.37.0",
    "openrouter>=0.9.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "tavily-python>=0.7.24",
    "uvicorn>=0.47.0",
]
